# mir-converter

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_convert.py
src/mir_converter/: __init__.py  column_sanitizer.py  xlsx_to_csv.py
src/mir_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_column_sanitizer.py  test_medinfo_guardrails.py  test_xlsx_to_csv.py
